--- a/modbusStudy/modbusStudy.csproj
+++ b/modbusStudy/modbusStudy.csproj
@@ -36,8 +36,17 @@
     <Reference Include="EasyModbus, Version=5.6.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\EasyModbusTCP.5.6.0\lib\net40\EasyModbus.dll</HintPath>
     </Reference>
+    <Reference Include="IoTClient, Version=1.0.40.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\IoTClient.1.0.40\lib\netstandard2.0\IoTClient.dll</HintPath>
+    </Reference>
+    <Reference Include="NModbus, Version=3.0.81.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NModbus.3.0.81\lib\net46\NModbus.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Ports, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.IO.Ports.4.6.0\lib\net461\System.IO.Ports.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,17 +58,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="helper.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="NModbus_Demo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="NModbus_Demo.Designer.cs">
+      <DependentUpon>NModbus_Demo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="IotClient_Demo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="IotClient_Demo.Designer.cs">
+      <DependentUpon>IotClient_Demo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="helper.cs" />
+    <Compile Include="EasyModBusNet_Demo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EasyModBusNet_Demo.Designer.cs">
+      <DependentUpon>EasyModBusNet_Demo.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="NModbus_Demo.resx">
+      <DependentUpon>NModbus_Demo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="IotClient_Demo.resx">
+      <DependentUpon>IotClient_Demo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EasyModBusNet_Demo.resx">
+      <DependentUpon>EasyModBusNet_Demo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
