--- a/modbusStudy/packages.config
+++ b/modbusStudy/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EasyModbusTCP" version="5.6.0" targetFramework="net45" />
+  <package id="IoTClient" version="1.0.40" targetFramework="net48" />
+  <package id="NModbus" version="3.0.81" targetFramework="net48" />
+  <package id="System.IO.Ports" version="4.6.0" targetFramework="net48" />
 </packages>
